--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ data/clean/NYU/
 data/Yeo2011_7Networks_MNI152_FreeSurferConformed1mm_LiberalMask.nii
 data/Yeo2011_17Networks_MNI152_FreeSurferConformed1mm_LiberalMask.nii
 *.nii
+*.npz
