--- a/hpc/default_pipeline_changed.yml
+++ b/hpc/default_pipeline_changed.yml
@@ -85,7 +85,7 @@ pipeline_setup:
       # Configuration for a graphviz visualization of the entire workflow. See https://fcp-indi.github.io/docs/developer/nodes#CPAC.pipeline.nipype_pipeline_engine.Workflow.write_graph for details about the various options
       entire_workflow:
         # Whether to generate the graph visualization
-        generate: On #: NC turn off
+        generate: Off #: NC turn off
         # Options: [orig, hierarchical, flat, exec, colored]
         graph2use: [colored]
         # Options: [svg, png]
@@ -134,7 +134,7 @@ pipeline_setup:
     # - Conversely, using too little RAM can impede the speed of a pipeline run.
     # - It is recommended that you set this to a value that when multiplied by
     #   'Number of Participants to Run Simultaneously' is as much RAM you can safely allocate.
-    maximum_memory_per_participant: 1
+    maximum_memory_per_participant: 12 #MP changed from 1
 
     # Prior to running a pipeline C-PAC makes a rough estimate of a worst-case-scenario maximum concurrent memory usage with high-resoltion data, raising an exception describing the recommended minimum memory allocation for the given configuration.
     # Turning this option off will allow pipelines to run without allocating the recommended minimum, allowing for more efficient runs at the risk of out-of-memory crashes (use at your own risk)
@@ -147,7 +147,7 @@ pipeline_setup:
       callback_log:
       # Percent. E.g., `buffer: 10` would estimate 1.1 * the observed memory usage from the callback log provided in "usage".
       # Can be overridden with the commandline flag `--runtime_buffer`.
-      buffer: 10
+      buffer: 5 #MP changed from 10
 
     # The maximum amount of cores (on a single machine) or slots on a node (on a cluster/grid)
     # to allocate per participant.
@@ -157,7 +157,7 @@ pipeline_setup:
     # - The maximum number of cores your run can possibly employ will be this setting multiplied
     #   by the number of participants set to run in parallel (the 'Number of Participants to Run
     #   Simultaneously' setting).
-    max_cores_per_participant: 1
+    max_cores_per_participant: 2 #MP changed from 1
 
     # The number of cores to allocate to ANTS-based anatomical registration per participant.
     # - Multiple cores can greatly speed up this preprocessing step.
@@ -170,7 +170,7 @@ pipeline_setup:
     # The number of participant workflows to run at the same time.
     # - The maximum number of cores your run can possibly employ will be this setting
     #   multiplied by the number of cores dedicated to each participant (the 'Maximum Number of Cores Per Participant' setting).
-    num_participants_at_once: 1
+    num_participants_at_once: 3 #MP changed from 1
 
     # Full path to the FSL version to be used by CPAC.
     # If you have specified an FSL path in your .bashrc file, this path will be set automatically.
@@ -1415,34 +1415,35 @@ nuisance_corrections:
            top_frequency: 0.1
            method: default
 
-      -  Name: 'defaultNoGSR'
+      #MP: Comment this out since we are not going to use this
+      #-  Name: 'defaultNoGSR'
+      #
+      #   Motion:
+      #     include_delayed: true
+      #     include_squared: true
+      #     include_delayed_squared: true
 
-         Motion:
-           include_delayed: true
-           include_squared: true
-           include_delayed_squared: true
+      #   aCompCor:
+      #     summary:
+      #       method: DetrendPC
+      #       components: 5
+      #     tissues:
+      #       - WhiteMatter
+      #       - CerebrospinalFluid
+      #     extraction_resolution: 2
 
-         aCompCor:
-           summary:
-             method: DetrendPC
-             components: 5
-           tissues:
-             - WhiteMatter
-             - CerebrospinalFluid
-           extraction_resolution: 2
+      #   CerebrospinalFluid:
+      #     summary: Mean
+      #     extraction_resolution: 2
+      #     erode_mask: true
 
-         CerebrospinalFluid:
-           summary: Mean
-           extraction_resolution: 2
-           erode_mask: true
+      #   PolyOrt:
+      #    degree: 2
 
-         PolyOrt:
-          degree: 2
-
-         Bandpass:
-           bottom_frequency: 0.01
-           top_frequency: 0.1
-           method: default
+      #   Bandpass:
+      #     bottom_frequency: 0.01
+      #     top_frequency: 0.1
+      #     method: default
 
     # Standard Lateral Ventricles Binary Mask
     # used in CSF mask refinement for CSF signal-related regressions
@@ -1562,7 +1563,7 @@ post_processing:
 
 timeseries_extraction:
 
-  run: On
+  run: off #MP: changed from 'on' to 'off'
 
   # Enter paths to region-of-interest (ROI) NIFTI files (.nii or .nii.gz) to be used for time-series extraction, and then select which types of analyses to run.
   # Denote which analyses to run for each ROI path by listing the names below. For example, if you wish to run Avg and SpatialReg, you would enter: '/path/to/ROI.nii.gz': Avg, SpatialReg
