--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-nibabel==5.3.2
-numpy==2.2.4
-pandas==2.2.3
-nilearn==0.11.1
-matplotlib==3.10.1
-seaborn==0.13.2
+matplotlib==3.10.3 
+networkx==3.4.2 
+nibabel==5.3.2 
+nilearn==0.11.1 
+numpy==2.2.6 
+pandas==2.2.3 
+seaborn==0.13.2 
+torch==2.2.2 
+torch_geometric==2.6.1 
 tqdm==4.67.1
-networkx==3.4.2
